--- a/package.json
+++ b/package.json
@@ -24,13 +24,23 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.7",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@sveltejs/adapter-cloudflare": "^4.7.0",
-		"prettier-plugin-merge": "^0.7.0"
+		"bits-ui": "^0.21.13",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.424.0",
+		"marked": "^13.0.3",
+		"prettier-plugin-classnames": "^0.7.1",
+		"prettier-plugin-merge": "^0.7.0",
+		"svelte-fa": "^4.0.2",
+		"svelte-i18n": "^4.0.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
 	}
 }
