--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@sveltejs/adapter-cloudflare": "^4.7.0",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.424.0",
 		"marked": "^13.0.3",
+		"mode-watcher": "^0.4.1",
 		"prettier-plugin-classnames": "^0.7.1",
 		"prettier-plugin-merge": "^0.7.0",
-		"svelte-fa": "^4.0.2",
 		"svelte-i18n": "^4.0.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
