--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
 		"@sveltejs/adapter-cloudflare": "^4.7.0",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.424.0",
 		"marked": "^13.0.3",
 		"mode-watcher": "^0.4.1",
 		"prettier-plugin-classnames": "^0.7.1",
 		"prettier-plugin-merge": "^0.7.0",
 		"svelte-i18n": "^4.0.0",
+		"sveltekit-superforms": "^2.17.0",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
 	}
 }
