--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.7.1",
 		"@sveltejs/adapter-cloudflare": "^4.7.0",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
