i dont even know man

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
 	}
 }
