--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.13",
+		"@types/jquery": "^3.5.32",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
 		"prettier-plugin-svelte": "^3.2.6",
