--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "npm run build && wrangler pages dev",
+		"preview": "npm run build && vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"deploy": "npm run build && wrangler pages deploy",
+		"deploy": "npm run build && npx gh-pages -d build",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
@@ -19,6 +19,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/jquery": "^3.5.32",
 		"autoprefixer": "^10.4.20",
+		"gh-pages": "^6.3.0",
 		"postcss": "^8.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -33,6 +34,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@sveltejs/adapter-cloudflare": "^4.9.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"formsnap": "^1.0.1",
